--- a/ALGORITHM/Samsung SW Academy/1.전기버스.md
+++ b/ALGORITHM/Samsung SW Academy/1.전기버스.md
@@ -12,7 +12,7 @@ description: from Samsung SW Expert Academy
 >
 > 만약 충전기 설치가 잘못되어 종점에 도착할 수 없는 경우는 0을 출력한다. 출발지에는 항상 충전기가 설치되어 있지만 충전횟수에는 포함하지 않는다.
 
-![](../.gitbook/assets/image.png)
+![](C:\Users\donghyeong\Documents\GitHub\gitbook\image\ALGORITHM\Samsung SW Academy)
 
 > 입력 :  ​​​​
 >
@@ -26,7 +26,7 @@ description: from Samsung SW Expert Academy
 > 4 7 9 14 17
 > ```
 
-> 출력 : 
+> 출력 :
 >
 > \#'노선번호'  '최소충전 횟수 or 0\(=종점까지 도달 못할 시\)'
 >
@@ -69,7 +69,7 @@ description: from Samsung SW Expert Academy
 >
 >    1. prv = \[ \]   :  이전 충전소 &lt;-&gt; 현재 충전소 거리
 >    2. nxt = \[ \]   :  현재 충전소 &lt;-&gt; 다음 충전소 거리
->    3. mList = \[ \] : 충전소 위치 리스트 
+>    3. mList = \[ \] : 충전소 위치 리스트
 >
 >     +\) 탐색 방법 : 충전소 위치별 완전 탐색.
 {% endtab %}
@@ -100,4 +100,3 @@ return answer
 ```
 {% endtab %}
 {% endtabs %}
-
