--- a/ALGORITHM/Samsung SW Academy/1.전기버스.md
+++ b/ALGORITHM/Samsung SW Academy/1.전기버스.md
@@ -12,8 +12,7 @@ description: from Samsung SW Expert Academy
 >
 > 만약 충전기 설치가 잘못되어 종점에 도착할 수 없는 경우는 0을 출력한다. 출발지에는 항상 충전기가 설치되어 있지만 충전횟수에는 포함하지 않는다.
 
-![](C:\Users\donghyeong\Documents\GitHub\gitbook\image\ALGORITHM\Samsung SW Academy)
-
+![title](/image/ALGORITHM/Samsung SW Academy/samsung_1.jpg)
 > 입력 :  ​​​​
 >
 > ```python
