이미지 넣기

--- a/ALGORITHM/Samsung SW Academy/1.전기버스.md
+++ b/ALGORITHM/Samsung SW Academy/1.전기버스.md
@@ -12,7 +12,8 @@ description: from Samsung SW Expert Academy
 >
 > 만약 충전기 설치가 잘못되어 종점에 도착할 수 없는 경우는 0을 출력한다. 출발지에는 항상 충전기가 설치되어 있지만 충전횟수에는 포함하지 않는다.
 
-![title](/image/ALGORITHM/Samsung SW Academy/samsung_1.jpg)
+<img src="/image/ALGORITHM/Samsung SW Academy/samsung_1.jpg" width="300" height="300">
+
 > 입력 :  ​​​​
 >
 > ```python
