--- a/ALGORITHM/Samsung SW Academy/1.전기버스.md
+++ b/ALGORITHM/Samsung SW Academy/1.전기버스.md
@@ -96,7 +96,46 @@ return answer
 
 {% tab title="CODE" %}
 ```python
+def getDist(l, n):
+	prv = []
+	nxt = []
+	p = 0
+	for i in l:
+		prv.append(i-p)
+		p=i
+	nlist = l[1:]
+	nlist.append(n)
+	p=l[0]
+	for j in nlist:
+		nxt.append(j-p)
+		p=j
+	return prv, nxt
 
+def oilCheck(mList, prv, nxt, k):
+	leftOil = k
+	charge = 0
+	for idx in range(0, len(mList)):
+		leftOil-=prv[idx]
+		if(leftOil>=nxt[idx]):
+			pass
+		elif(nxt[idx]>k):
+			return 0
+		else:
+			#print("oil: {0} able:{1}".format(leftOil, leftOil-nxt[idx]))
+			charge+=1
+			leftOil = k
+	return charge
+
+T = int(input())
+# 여러개의 테스트 케이스가 주어지므로, 각각을 처리합니다.
+for test_case in range(1, T + 1):
+	k,n,m = map(int, input().split())
+	mList = list(map(int, input().split()))
+	num = 0
+
+	prv, nxt = getDist(mList,n)
+	num = oilCheck(mList, prv, nxt, k)
+	print("#%d %d" %(test_case, num))
 ```
 {% endtab %}
 {% endtabs %}
